--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.0.1",
+    "faker": "^4.1.0",
     "husky": "^2.6.0",
     "lint-staged": "^8.2.1",
     "prettier": "^1.16.4",
