--- a/.env.example
+++ b/.env.example
@@ -48,3 +48,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_CLIENT_CALLBACK_URL=/authorize/github/callback
+
+HASHIDS_SALT=seopyoisthebestapp
+HASHIDS_ALPHABET=abcdefghijklmnopqrstuvwxyz1234567890
+HASHIDS_LENGTH=8
