--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "spatie/laravel-permission": "^3.9",
         "spatie/laravel-translatable": "^4.2",
         "spatie/url": "^1.3",
-        "vinkla/hashids": "^7.0"
+        "vinkla/hashids": "7.0.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
@@ -47,6 +47,9 @@
         "psr-4": {
             "App\\": "app/"
         },
+        "files": [
+            "App\\Helpers\\Hashids.php"
+        ],
         "classmap": [
             "database/seeds",
             "database/factories"
